--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,6 +11,14 @@
         <servlet-name>AddServlet</servlet-name>
         <url-pattern>/add</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>Demo01</servlet-name>
+        <servlet-class>com.atguigu.servlets.Demo01</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Demo01</servlet-name>
+        <url-pattern>/demo01</url-pattern>
+    </servlet-mapping>
     <!--
     1. 用户发请求，action=add
     2. 项目中，web.xml中找到url-pattern = /add   -> 第12行
@@ -19,4 +27,13 @@
     5. 找第8行的servlet-class -> com.atguigu.servlets.AddServlet
     6. 用户发送的是post请求（method=post） ， 因此 tomcat会执行AddServlet中的doPost方法
     -->
+    <!-- 在上下文参数中配置视图前缀和视图后缀 -->
+    <context-param>
+        <param-name>view-prefix</param-name>
+        <param-value>/</param-value>
+    </context-param>
+    <context-param>
+        <param-name>view-suffix</param-name>
+        <param-value>.html</param-value>
+    </context-param>
 </web-app>
