--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <servlet>
+    <!--<servlet>
         <servlet-name>AddServlet</servlet-name>
         <servlet-class>com.atguigu.servlets.AddServlet</servlet-class>
     </servlet>
@@ -18,7 +18,7 @@
     <servlet-mapping>
         <servlet-name>Demo01</servlet-name>
         <url-pattern>/demo01</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
     <!--
     1. 用户发请求，action=add
     2. 项目中，web.xml中找到url-pattern = /add   -> 第12行
